# ken_gold_candle

./: BACKTEST_QUICKSTART.md  BUGFIX_VALIDATION.md  CLAUDE.md  HOW_TO_USE_CLAUDE_FOR_OPTIMIZE.MD  OPTIMIZATION_FINDINGS.md  OPTIMIZATION_LEARNINGS_Round7.md  OPTIMIZATION_PROMPT.md  OPTIMIZATION_RESULTS_2025-10-07.md  OPTIMIZATION_RESULTS_2025-10-11.md  OPTIMIZATION_RESULTS_2025-10-12_Round3.md  OPTIMIZATION_RESULTS_2025-10-12_Round4.md  OPTIMIZATION_RESULTS_2025-10-12_Round5.md  OPTIMIZATION_RESULTS_2025-10-12_Round6.md  OPTIMIZATION_RESULTS_2025-10-14_Round7.md  OPTIMIZATION_RESULTS_20251007.md  OPTIMIZATION_SUMMARY.md  OPTIMIZER_README.md  QUICK_OPTIMIZATION_PROMPT.txt  README.md  agent-prompt.md  backtest_results.json  backtest_runner.py  comprehensive_results.json  comprehensive_results_fixed.json  ken_gold_candle.py  ken_gold_candle.py.backup  ken_gold_candle.py.backup_round5  ken_gold_candle.py.backup_round6  optimization_results.json  optimize_parameters.py  pyproject.toml  requirements.txt  run_optimization.sh  strategy_optimizer.py  test_multiple_periods.py  test_multiple_periods.sh  test_random_periods_json.sh  test_random_periods_l6.sh
.claude/agents/: api-docs-finder.md
best-results/oct2025/: 10-7
