[project]
name = "ken-gold-candle"
version = "1.0.0"
description = "Automated trading bot for Gold (XAUUSD) using a two-candle pattern strategy with adaptive sizing"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Kenneth Chambers" }
]
keywords = ["trading", "backtrader", "gold", "xauusd", "algorithmic-trading", "backtesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "backtrader>=1.9.76.123",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "numpy>=1.23.0",
]

[project.urls]
Homepage = "https://github.com/kennethchambers/ken_gold_candle"
Repository = "https://github.com/kennethchambers/ken_gold_candle"

[project.scripts]
backtest = "backtest_runner:main"
optimize = "strategy_optimizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

